--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <script src="jquery-3.6.0.js"></script>
     <script src="client.js"></script>
     <script src="events.js"></script>
-   <link rel="stylesheet" href="style.css">
+   
 
-<h1> 🤑 Monthly Salary Cost Calculator 🤑</h1>
+<h1> $Monthly Salary Cost Calculator$ </h1>
 </head>
 <body>
 <form id="employeeForm">
