weekend-jquery-salary-calculator

--- a/index.html
+++ b/index.html
@@ -11,10 +11,36 @@
     <script src="events.js"></script>
    
 
-<h1> $Monthly Salary Cost Calculator$ </h1>
-</head>
-<body>
 
-  
-</body>
-</html>
+
+
+<body>
+    <head>
+      <div>
+        <h1> $Monthly Salary Cost Calculator$ </h1>
+        <h5>Dev By Asante Simmons</h5>
+      </div>
+    </head>
+    <div id="inputDiv">
+      <input id="firstNameInput" placeholder="First Name" type="text">
+      <input id="lastNameInput" placeholder="Last Name" type="text">
+      <input id="idNumberInput" placeholder="Employee ID" type="number">
+      <input id="jobTitleInput" placeholder="Job Title" type="text">
+      <input id="salaryInput" placeholder="Salary" type="number">
+      <button id="submitButton">Submit</button>
+    </div>
+    <div id="tableDiv">
+      <thead id="tableHead">
+
+      </thead>
+    
+      <tbody id="tableBody">
+
+      </tbody>
+      <tfoot id="tableFoot">
+
+      </tfoot>
+    </div>
+
+    
+  </body>
